update config.js - dcr

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     </head>
 	<!-- version 1.21.9 -->
     <body id="client">
+		<div id="test"></div>
 		<div id="popup" class="popup">
 			<div class="popup-content">
 			  <span class="closeBtn">&times;</span>
