fix css and loader view

--- a/index.html
+++ b/index.html
@@ -62,7 +62,6 @@
 				<div id="main-console" class="console">
 				  <div class="title">Habbo Origins WebCustom</div>
 				  <div style="text-align: center;">Thanks <a href="https://github.com/hiperesp/">@hiperesp</a> Made by <a href="https://github.com/fripokoff">@Fripok</a></div>
-				  <div class="pattern">&nbsp;</div>
 				  <div id="loader" class="loop cubes">
 					<div class="item cubes"></div>
 					<div class="item cubes"></div>
@@ -74,7 +73,6 @@
 				  <div id="items" class="inner">
 					
 				  </div>
-				  <div id="last-update" class="time"></div>
 				  <div class="friends">
 					<div id="countriesPopup" style="display:none;">
 						<div onclick="setLoaderbyCountryCode('us')" class="country" data-country="us" style="background:#ffd400;"><img class="avatar" src="images/us.jpg"/></div>
@@ -93,7 +91,7 @@
 					</div>
 				  </div>
 
-				  <div id="players-online" class="time"></div> 
+				  <div id="players-online" style="text-align: center;"></div> 
 				</div>
 			  </div>
 	
