--- a/index.html
+++ b/index.html
@@ -61,7 +61,13 @@
 			<div class="container">
 				<div id="main-console" class="console">
 				  <div class="title">Habbo Origins WebCustom</div>
-				  <div style="text-align: center;">Thanks <a href="https://github.com/hiperesp/">@hiperesp</a> Made by <a href="https://github.com/fripokoff">@Fripok</a></div>
+				  <div class="select-container">
+					<select id="tradesites">
+					  <option value="traderclub">TraderClub.gg</option>
+					  <option value="originvalues">OriginValues.com</option>
+					</select>
+					<a id="webtrader" href="https://traderclub.gg/">TraderClub.gg</a>
+				  </div>
 				  <div id="loader" class="loop cubes">
 					<div class="item cubes"></div>
 					<div class="item cubes"></div>
@@ -91,7 +97,8 @@
 					</div>
 				  </div>
 
-				  <div id="players-online" style="text-align: center;"></div> 
+				  <div id="players-online" style="text-align: center;"></div>
+				  <div style="text-align: center;">Thanks <a href="https://github.com/hiperesp/">@hiperesp</a> Made by <a href="https://github.com/fripokoff">@Fripok</a></div>
 				</div>
 			  </div>
 	
