target blank for new tabs on hrefs

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 					  <option value="traderclub">TraderClub.gg</option>
 					  <option value="originvalues">OriginValues.com</option>
 					</select>
-					<a id="webtrader" href="https://traderclub.gg/">TraderClub.gg</a>
+					<a id="webtrader" href="https://traderclub.gg/" target="_blank">TraderClub.gg</a>
 				  </div>
 				  <div id="loader" class="loop cubes">
 					<div class="item cubes"></div>
@@ -98,7 +98,7 @@
 				  </div>
 
 				  <div id="players-online" style="text-align: center;"></div>
-				  <div style="text-align: center;">Thanks <a href="https://github.com/hiperesp/">@hiperesp</a> Made by <a href="https://github.com/fripokoff">@Fripok</a></div>
+				  <div style="text-align: center;">Thanks <a href="https://github.com/hiperesp/" target="_blank">@hiperesp</a> Made by <a href="https://github.com/fripokoff" target="_blank">@Fripok</a></div>
 				</div>
 			  </div>
 	
