fix ES11 for basilisk

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 					  <option value="traderclub">TraderClub.gg</option>
 					  <option value="originvalues">OriginValues.com</option>
 					</select>
-					<a id="webtrader" href="https://traderclub.gg/" target="_blank">TraderClub.gg</a>
+					<a id="webtrader" href="https://traderclub.gg/" target="_blank">Visit:traderclub.gg</a>
 				  </div>
 				  <div id="loader" class="loop cubes">
 					<div class="item cubes"></div>
