fix refresh values

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 					  </div>
 					  <div style="background:#ffd400;" id="countryBtn" class="friend"><img class="avatar" src="images/us.jpg" align="middle"/></div>
 
-					<div onclick="getOriginValues()" style="background:#ffd400;" id="refreshBtn" class="friend"><img class="avatar" src="images/refresh.png" align="middle"/>
+					<div onclick="refreshTradeValues()" style="background:#ffd400;" id="refreshBtn" class="friend"><img class="avatar" src="images/refresh.png" align="middle"/>
 					  </div>
 					<div onclick="fullScreen()" style="background:#ffd400;" id="fullscreenBtn" class="friend"><img class="avatar" src="images/fullscreen.png" align="middle"/>
 					</div>
