--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 				  <div class="select-container">
 					<select id="tradesites">
 					  <option value="traderclub">TraderClub.gg</option>
-					  <option value="originvalues">OriginValues.com</option>
+					  <!-- <option value="originvalues">OriginValues.com</option> -->
 					</select>
 					<a id="webtrader" href="https://traderclub.gg/" target="_blank">Visit:traderclub.gg</a>
 				  </div>
