Added Support for Ducket.net, and fixed formatting

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 				  <div id="dcr_version" class="title"></div>
 				  <div class="select-container">
 					<select id="tradesites">
+                      <option value="ducket">Ducket.net</option>
 					  <option value="traderclub">TraderClub.gg</option>
 					  <!-- <option value="originvalues">OriginValues.com</option> -->
 					</select>
